--- a/requirements.txt
+++ b/requirements.txt
@@ -18,4 +18,5 @@ dash>=2.0.0
 dash-bootstrap-components>=0.13.0
 scikit-learn>=0.24.2
 tensorflow>=2.6.0
-torch>=1.9.0 
+torch>=1.9.0
+matplotlib>=3.4.0 
